fixed alignment on nav

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -14,6 +14,7 @@
         &__menu__icon{
             color: colors.$grayish-violet;
             font-size: 1.8rem;
+            margin-bottom: 0.4rem;
         }
     }
     
